# korjata

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/comps/: bottom_row.rs  data_panel.rs  mod.rs
src/core/: attribute.rs  entry.rs  exif.rs  ifd.rs  marker.rs  media.rs  mod.rs  parse.rs  parser.rs  segment.rs  tags.rs  value.rs
