[package]
name = "korjata"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13.1"
rand = "0.9.2"
rfd = "0.15.4"
chrono = "0.4.42"
phf = { version = "0.13.1", features = ["macros"] }
num_enum = "0.7.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true